src/css/components/Navigation.module.css
.bar
{
  width: 200px;
  position: fixed;
  top: 0;
  bottom: 0;
  box-sizing: border-box;
  border-right: 1px solid black;
  display: flex;
  flex-direction: column;
}

.game
{
  text-align: center;
  font-weight: bold;
  padding: 10px 0;
  border-bottom: 1px solid black;
}

.tab
{
  border-bottom: 1px solid black;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  box-sizing: border-box;
  color: black;
  text-decoration: none;
}

.label
{
  width: 100%;
  text-align: center;
}

.container
{
  height: 32px;
  width: 32px;
  display: flex;
  user-select: none;
  justify-content: center;
  align-items: center;
}

.icon
{
  font-size: 24px;
  margin: 0 auto;
}

.version
{
  margin-top: auto;
  width: 100%;
  text-align: right;
  padding: 4px;
  box-sizing: border-box;
}

@media (max-width: 968px)
{
  .bar
  {
    width: 24px;
  }

  .tab
  {
    width: 24px;
    height: 24px;
  }

  .label
  {
    display: none;
  }

  .container
  {
  }

  .icon
  {
    font-size: 16px;
  }

  .version
  {
    display: none;
  }
}

